# RouteLens

./: .clang-format  .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/workflows/: windows-ci.yml
resources/: app.manifest
src/app/: Application.cpp  Application.h  Logger.cpp  Logger.h  main.cpp
src/core/: ClashApiClient.cpp  ClashApiClient.h  ClashConnectionMatcher.cpp  ClashConnectionMatcher.h  ConnectionEnricher.cpp  ConnectionEnricher.h  GeoIpResolver.cpp  GeoIpResolver.h  InterfaceClassifier.cpp  InterfaceClassifier.h  Models.h  PingAggregator.cpp  PingAggregator.h  PingScheduler.cpp  PingScheduler.h  RouteClassifier.cpp  RouteClassifier.h  TunnelCorrelator.cpp  TunnelCorrelator.h  TunnelProcessRegistry.cpp  TunnelProcessRegistry.h  UdpFlowAggregator.cpp  UdpFlowAggregator.h
src/core/diagnostic/: AnchorPingProbe.cpp  AnchorPingProbe.h  BackgroundTrafficProbe.cpp  BackgroundTrafficProbe.h  BufferbloatProbe.cpp  BufferbloatProbe.h  DiagnosticEngine.cpp  DiagnosticEngine.h  DiagnosticRuleEngine.cpp  DiagnosticRuleEngine.h  DiagnosticTypes.cpp  DiagnosticTypes.h  IDiagnosticProbe.h  TunnelLoadProbe.cpp  TunnelLoadProbe.h
src/platform/windows/: ConnectionScannerWin.cpp  ConnectionScannerWin.h  EtwNetworkTap.cpp  EtwNetworkTap.h  EtwParser.cpp  EtwParser.h  InterfaceInspectorWin.cpp  InterfaceInspectorWin.h  PingProbeWin.cpp  PingProbeWin.h  ProcessMonitorWin.cpp  ProcessMonitorWin.h  RouteHelpersWin.cpp  RouteHelpersWin.h  RouteResolverWin.cpp  RouteResolverWin.h  TcpPingProbeWin.cpp  TcpPingProbeWin.h  UdpProbeWin.cpp  UdpProbeWin.h  WinapiUtils.cpp  WinapiUtils.h
src/platform/windows/diagnostic/: AdapterErrorProbe.cpp  AdapterErrorProbe.h  CpuPressureProbe.cpp  CpuPressureProbe.h  HopProbe.cpp  HopProbe.h  PacketLossProbe.cpp  PacketLossProbe.h  VpnRouteProbe.cpp  VpnRouteProbe.h  WifiMetricsProbe.cpp  WifiMetricsProbe.h
src/ui/: InterfacesPanel.cpp  InterfacesPanel.h  KindIcon.cpp  KindIcon.h  MainWindow.cpp  MainWindow.h  VerdictBadge.cpp  VerdictBadge.h
tests/: smoke.cpp
